Generated Javadoc html; Updated README with completed documentation;